@@ -20,32 +20,48 @@ package org.jackhuang.hmcl.ui.instances;
 import com.jfoenix.controls.JFXButton;
 import com.jfoenix.controls.JFXDialogLayout;
 import com.jfoenix.controls.JFXListView;
+import javafx.beans.binding.Bindings;
+import javafx.beans.property.BooleanProperty;
+import javafx.beans.property.ObjectProperty;
+import javafx.beans.property.SimpleBooleanProperty;
+import javafx.beans.property.SimpleObjectProperty;
 import javafx.beans.value.ObservableValue;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.Node;
-import javafx.scene.control.Label;
-import javafx.scene.control.ListCell;
-import javafx.scene.control.Skin;
-import javafx.scene.control.Tooltip;
+import javafx.scene.control.*;
 import javafx.scene.image.Image;
 import javafx.scene.image.PixelWriter;
 import javafx.scene.image.WritableImage;
+import javafx.scene.input.KeyCode;
+import javafx.scene.input.KeyEvent;
 import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.HBox;
+import javafx.scene.layout.Priority;
 import javafx.scene.layout.StackPane;
 import javafx.stage.FileChooser;
+import javafx.scene.text.Text;
+import org.jackhuang.hmcl.addon.RemoteAddon;
+import org.jackhuang.hmcl.addon.mod.LocalMod;
+import org.jackhuang.hmcl.addon.mod.LocalModFile;
+import org.jackhuang.hmcl.addon.repository.ModrinthRemoteAddonRepository;
+import org.jackhuang.hmcl.game.GameComponentType;
 import org.jackhuang.hmcl.game.HMCLGameInstance;
 import org.jackhuang.hmcl.schematic.LitematicFile;
+import org.jackhuang.hmcl.schematic.Schematic;
+import org.jackhuang.hmcl.schematic.SchematicType;
+import org.jackhuang.hmcl.setting.DownloadProviders;
 import org.jackhuang.hmcl.task.Schedulers;
 import org.jackhuang.hmcl.task.Task;
 import org.jackhuang.hmcl.ui.*;
 import org.jackhuang.hmcl.ui.construct.*;
 import org.jackhuang.hmcl.util.FileNameSet;
-import org.jackhuang.hmcl.util.Lang;
+import org.jackhuang.hmcl.ui.nbt.NBTEditorPage;
 import org.jackhuang.hmcl.util.StringUtils;
+import org.jackhuang.hmcl.util.SynchronizedLazy;
 import org.jackhuang.hmcl.util.i18n.I18n;
 import org.jackhuang.hmcl.util.io.FileUtils;
+import org.jackhuang.hmcl.util.versioning.GameVersionNumber;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -55,10 +71,12 @@ import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
 import java.util.*;
-import java.util.Objects;
+import java.util.concurrent.locks.ReentrantLock;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static org.jackhuang.hmcl.ui.FXUtils.onEscPressed;
+import static org.jackhuang.hmcl.ui.FXUtils.*;
+import static org.jackhuang.hmcl.ui.ToolbarListPageSkin.createToolbarButton2;
 import static org.jackhuang.hmcl.util.i18n.I18n.i18n;
 import static org.jackhuang.hmcl.util.logging.Logger.LOG;
 
@@ -67,6 +85,23 @@ import static org.jackhuang.hmcl.util.logging.Logger.LOG;
  */
 public final class SchematicsPage extends ListPageBase<SchematicsPage.Item> {
 
+    private static final SynchronizedLazy<RemoteAddon> litematicaLazy = new SynchronizedLazy<>(() -> {
+        try {
+            return ModrinthRemoteAddonRepository.MODS.getAddonById(DownloadProviders.getDownloadProvider(), "litematica");
+        } catch (IOException e) {
+            LOG.warning("Failed to fetch litematica", e);
+            return null;
+        }
+    });
+    private static final SynchronizedLazy<RemoteAddon> forgematicaLazy = new SynchronizedLazy<>(() -> {
+        try {
+            return ModrinthRemoteAddonRepository.MODS.getAddonById(DownloadProviders.getDownloadProvider(), "forgematica");
+        } catch (IOException e) {
+            LOG.warning("Failed to fetch forgematica", e);
+            return null;
+        }
+    });
+
     private static String translateAuthorName(String author) {
         if (I18n.isUseChinese() && "hsds".equals(author)) {
             return "黑山大叔";
@@ -74,9 +109,22 @@ public final class SchematicsPage extends ListPageBase<SchematicsPage.Item> {
         return author;
     }
 
+    private static String translateType(SchematicType type) {
+        return switch (type) {
+            case SCHEM -> i18n("schematics.info.type.schem");
+            case NBT_STRUCTURE -> i18n("schematics.info.type.nbt_structure");
+            case LITEMATIC -> i18n("schematics.info.type.litematic");
+        };
+    }
+
     private final WeakListenerHolder listenerHolder = new WeakListenerHolder();
+
+    private @Nullable HMCLGameInstance gameInstance;
     private Path schematicsDirectory;
-    private DirItem currentDirectory;
+
+    private final ObjectProperty<DirItem> currentDirectory = new SimpleObjectProperty<>(this, "currentDirectory", null);
+    private final BooleanProperty isRootProperty = new SimpleBooleanProperty(this, "isRoot", true);
+    private final ObjectProperty<RemoteAddon> downloadTarget = new SimpleObjectProperty<>(this, "downloadTarget");
 
     /// Creates a schematics list that reloads when `instanceContext` changes.
     ///
@@ -84,7 +132,7 @@ public final class SchematicsPage extends ListPageBase<SchematicsPage.Item> {
     public SchematicsPage(ObservableValue<? extends HMCLGameInstance.Optional> instanceContext) {
         Objects.requireNonNull(instanceContext, "instanceContext");
         FXUtils.applyDragListener(this,
-                file -> currentDirectory != null && Files.isRegularFile(file) && FileUtils.getName(file).endsWith(".litematic"),
+                file -> currentDirectoryProperty().get() != null && Schematic.isFileSchematic(file),
                 this::addFiles
         );
 
@@ -97,53 +145,120 @@ public final class SchematicsPage extends ListPageBase<SchematicsPage.Item> {
 
     @Override
     protected Skin<?> createDefaultSkin() {
-        return new SchematicsPageSkin();
+        return new SchematicsPageSkin(this);
     }
 
     public void loadInstance(HMCLGameInstance.Optional instance) {
-        HMCLGameInstance gameInstance = instance.instance();
-        this.schematicsDirectory = gameInstance != null ? gameInstance.getSchematicsDirectory() : null;
+        this.gameInstance = instance.instance();
+
+        if (gameInstance == null) {
+            this.schematicsDirectory = null;
+            return;
+        }
+
+        this.schematicsDirectory = gameInstance.getSchematicsDirectory();
 
         refresh();
     }
 
+    private ObjectProperty<DirItem> currentDirectoryProperty() {
+        return currentDirectory;
+    }
+
+    public BooleanProperty isRootProperty() {
+        return isRootProperty;
+    }
+
+    public void navigateBack() {
+        var d = currentDirectoryProperty().get();
+        if (d == null) return;
+        if (d.parent != null) navigateTo(d.parent);
+    }
+
+    public void downloadLitematica() {
+        if (downloadTarget.get() != null && gameInstance != null) {
+            var modDownloads = Controllers.getDownloadPage().showModDownloads();
+            modDownloads.selectInstance(gameInstance.getId());
+            Controllers.navigate(new DownloadPage(
+                    modDownloads,
+                    downloadTarget.get(),
+                    modDownloads.getInstanceOptional(),
+                    modDownloads.getCallback())
+            );
+        }
+    }
+
     public void refresh() {
-        Path schematicsDirectory = this.schematicsDirectory;
         if (schematicsDirectory == null) return;
+        HMCLGameInstance currentGameInstance = this.gameInstance;
+        if (currentGameInstance == null) return;
 
         setLoading(true);
-        Task.supplyAsync(() -> loadAll(schematicsDirectory, null))
-                .whenComplete(Schedulers.javafx(), (result, exception) -> {
-                    setLoading(false);
-                    if (exception == null) {
-                        DirItem target = result;
-                        if (currentDirectory != null) {
-                            loop:
-                            for (int i = 0; i < currentDirectory.relativePath.size(); i++) {
-                                String dirName = currentDirectory.relativePath.get(i);
-
-                                for (Item child : target.children) {
-                                    if (child instanceof DirItem && child.getName().equals(dirName)) {
-                                        target = (DirItem) child;
-                                        continue loop;
-                                    }
-                                }
-                                break;
-                            }
-                        }
-
-                        navigateTo(target);
-                    } else {
-                        LOG.warning("Failed to load schematics", exception);
+        DirItem currentDir = currentDirectoryProperty().get();
+        Task.supplyAsync(Schedulers.io(), () -> {
+            DirItem target = loadRoot(schematicsDirectory);
+            if (currentDir != null) {
+                loop:
+                for (String dirName : currentDir.relativePath) {
+                    try {
+                        target.preLoad();
+                    } catch (IOException e) {
+                        LOG.warning("Failed to preload sub-directories in " + target, e);
+                        break;
                     }
-                }).start();
+                    for (var dirChild : target.dirChildren) {
+                        if (dirChild.getName().equals(dirName)) {
+                            target = dirChild;
+                            continue loop;
+                        }
+                    }
+                    break;
+                }
+            }
+            return target;
+        }).whenComplete(Schedulers.javafx(), (result, exception) -> {
+            if (!Objects.equals(currentGameInstance, this.gameInstance)) return;
+            if (exception == null) {
+                navigateTo(result);
+            } else {
+                LOG.warning("Failed to load schematics", exception);
+            }
+            setLoading(false);
+        }).start();
+
+        downloadTarget.set(null);
+        Task.supplyAsync(Schedulers.io(), () -> {
+            var modManager = currentGameInstance.getModManager();
+            modManager.analyze();
+            var analyzer = modManager.getComponentAnalyzer();
+            if (analyzer == null) return null;
+            var modIds = modManager.getLocalFiles().stream()
+                    .map(LocalModFile::getMod)
+                    .map(LocalMod::getId)
+                    .collect(Collectors.toSet());
+            if (modIds.contains("litematica") || modIds.contains("forgematica")) return null;
+            var gameVersionNumber = GameVersionNumber.asGameVersion(modManager.getGameVersion());
+            if (!gameVersionNumber.isAtLeast("1.12", "17w31a"))
+                return null;
+            if ((analyzer.has(GameComponentType.FORGE) || analyzer.has(GameComponentType.NEO_FORGE))
+                    && gameVersionNumber.isAtLeast("1.16.4", "20w45a"))
+                return forgematicaLazy.get();
+            return litematicaLazy.get();
+        }).whenComplete(Schedulers.javafx(), (result, exception) -> {
+            if (!Objects.equals(currentGameInstance, gameInstance)) return;
+            if (exception == null) {
+                downloadTarget.set(result);
+            } else {
+                LOG.warning("Failed to fetch litematica", exception);
+            }
+        }).start();
     }
 
     public void addFiles(List<Path> files) {
-        if (currentDirectory == null)
+        if (currentDirectoryProperty().get() == null)
             return;
 
-        Path dir = currentDirectory.path;
+        Path dir = currentDirectoryProperty().get().getPath();
         try {
             // Can be executed in the background, but be careful that users can call loadVersion during this time
             Files.createDirectories(dir);
@@ -162,7 +277,7 @@ public final class SchematicsPage extends ListPageBase<SchematicsPage.Item> {
         FileChooser fileChooser = new FileChooser();
         fileChooser.setTitle(i18n("schematics.add.title"));
         fileChooser.getExtensionFilters().add(new FileChooser.ExtensionFilter(
-                i18n("extension.schematic"), "*.litematic"));
+                i18n("extension.schematic"), "*.litematic", "*.nbt", "*.schematic", "*.schem"));
         List<Path> files = Controllers.showOpenMultipleDialog(fileChooser);
         if (files != null && !files.isEmpty()) {
             addFiles(files);
@@ -170,10 +285,9 @@ public final class SchematicsPage extends ListPageBase<SchematicsPage.Item> {
     }
 
     public void onCreateDirectory() {
-        if (currentDirectory == null)
-            return;
+        if (currentDirectoryProperty().get() == null) return;
 
-        Path parent = currentDirectory.path;
+        Path parent = currentDirectoryProperty().get().getPath();
 
         FileNameSet existingPaths;
         try {
@@ -208,37 +322,29 @@ public final class SchematicsPage extends ListPageBase<SchematicsPage.Item> {
                 new Validator(i18n("schematics.create_directory.failed.already_exists"), existingPaths::notContains));
     }
 
-    private DirItem loadAll(Path dir, @Nullable DirItem parent) {
-        DirItem item = new DirItem(dir, parent);
+    public void onRevealSchematicsFolder() {
+        var d = currentDirectoryProperty().get();
+        var p = d != null ? d.getPath() : schematicsDirectory;
+        if (p != null) FXUtils.openFolder(p);
+    }
 
-        try (Stream<Path> stream = Files.list(dir)) {
-            for (Path path : Lang.toIterable(stream)) {
-                if (Files.isDirectory(path)) {
-                    item.children.add(loadAll(path, item));
-                } else if (path.getFileName().toString().endsWith(".litematic") && Files.isRegularFile(path)) {
-                    try {
-                        item.children.add(new LitematicFileItem(LitematicFile.load(path)));
-                    } catch (IOException e) {
-                        LOG.warning("Failed to load litematic file: " + path, e);
-                    }
-                }
-            }
-        } catch (NoSuchFileException ignored) {
-        } catch (IOException e) {
-            LOG.warning("Failed to load schematics in " + dir, e);
-        }
-
-        item.children.sort(Comparator.naturalOrder());
+    private DirItem loadRoot(Path dir) {
+        var item = new DirItem(dir, null);
+        item.load();
         return item;
     }
 
     private void navigateTo(DirItem item) {
-        currentDirectory = item;
-        getItems().clear();
-        if (item.parent != null) {
-            getItems().add(new BackItem(item.parent));
-        }
-        getItems().addAll(item.children);
+        if (currentDirectoryProperty().get() == item) return;
+        currentDirectoryProperty().set(item);
+        isRootProperty().set(item.parent == null);
+        setLoading(true);
+        Task.runAsync(item::load).whenComplete(Schedulers.javafx(), exception -> {
+            if (currentDirectoryProperty().get() == item) {
+                getItems().setAll(item.children);
+                setLoading(false);
+            }
+        }).start();
     }
 
     abstract sealed class Item implements Comparable<Item> {
@@ -280,12 +386,28 @@ public final class SchematicsPage extends ListPageBase<SchematicsPage.Item> {
         }
     }
 
-    private final class BackItem extends Item {
+    private final class DirItem extends Item {
+        final ReentrantLock lock = new ReentrantLock();
 
-        private final DirItem parent;
+        final Path path;
+        final @Nullable DirItem parent;
+        final List<Item> children = new ArrayList<>();
+        final List<DirItem> dirChildren = new ArrayList<>();
+        final List<String> relativePath;
+        int size = 0;
+        boolean preLoaded = false;
+        boolean loaded = false;
 
-        BackItem(DirItem parent) {
+        DirItem(Path path, @Nullable DirItem parent) {
+            this.path = path;
             this.parent = parent;
+
+            if (parent != null) {
+                this.relativePath = new ArrayList<>(parent.relativePath);
+                relativePath.add(FileUtils.getName(path));
+            } else {
+                this.relativePath = Collections.emptyList();
+            }
         }
 
         @Override
@@ -295,81 +417,78 @@ public final class SchematicsPage extends ListPageBase<SchematicsPage.Item> {
 
         @Override
         Path getPath() {
-            return null;
-        }
-
-        @Override
-        String getName() {
-            return "..";
-        }
-
-        @Override
-        String getDescription() {
-            return i18n("schematics.back_to", parent.getName());
-        }
-
-        @Override
-        SVG getIcon() {
-            return SVG.FOLDER;
-        }
-
-        @Override
-        void onClick() {
-            navigateTo(parent);
-        }
-
-        @Override
-        void onReveal() {
-            throw new UnsupportedOperationException("Unreachable");
-        }
-
-        @Override
-        void onDelete() {
-            throw new UnsupportedOperationException("Unreachable");
-        }
-    }
-
-    private final class DirItem extends Item {
-        final Path path;
-        final @Nullable DirItem parent;
-        final List<Item> children = new ArrayList<>();
-        final List<String> relativePath;
-
-        DirItem(Path path, @Nullable DirItem parent) {
-            this.path = path;
-            this.parent = parent;
-
-            if (parent != null) {
-                this.relativePath = new ArrayList<>(parent.relativePath);
-                relativePath.add(path.getFileName().toString());
-            } else {
-                this.relativePath = Collections.emptyList();
-            }
-        }
-
-        @Override
-        int order() {
-            return 1;
-        }
-
-        @Override
-        Path getPath() {
             return path;
         }
 
         @Override
         public String getName() {
-            return path.getFileName().toString();
+            return FileUtils.getName(path);
         }
 
         @Override
         String getDescription() {
-            return i18n("schematics.sub_items", children.size());
+            return i18n("schematics.sub_items", size);
         }
 
         @Override
         SVG getIcon() {
             return SVG.FOLDER;
+        }
+
+        void preLoad() throws IOException {
+            lock.lock();
+            try {
+                if (this.preLoaded) return;
+                this.size = 0;
+                this.dirChildren.clear();
+                try (Stream<Path> stream = Files.list(path)) {
+                    stream.forEach(p -> {
+                        boolean b1 = Files.isDirectory(p);
+                        boolean b2 = Schematic.isFileSchematic(p);
+                        if (b1 || b2) this.size++;
+                        if (b1) {
+                            var child = new DirItem(p, this);
+                            this.dirChildren.add(child);
+                        }
+                    });
+                }
+                this.preLoaded = true;
+            } finally {
+                lock.unlock();
+            }
+        }
+
+        void load() {
+            lock.lock();
+            try {
+                if (this.loaded) return;
+
+                this.children.clear();
+
+                preLoad();
+                for (var dir : dirChildren) {
+                    dir.preLoad();
+                    this.children.add(dir);
+                }
+                try (Stream<Path> stream = Files.list(path)) {
+                    stream.filter(Schematic::isFileSchematic)
+                            .forEach(p -> {
+                                try {
+                                    this.children.add(new SchematicItem(p));
+                                } catch (IOException e) {
+                                    LOG.warning("Failed to load schematic file: " + p, e);
+                                }
+                            });
+                }
+
+                this.children.sort(Comparator.naturalOrder());
+                this.loaded = true;
+            } catch (NoSuchFileException ignored) {
+            } catch (IOException e) {
+                LOG.warning("Failed to load schematics in " + path, e);
+            } finally {
+                lock.unlock();
+            }
         }
 
         @Override
@@ -385,8 +504,7 @@ public final class SchematicsPage extends ListPageBase<SchematicsPage.Item> {
         @Override
         void onDelete() {
             try {
-                FileUtils.cleanDirectory(path);
-                Files.deleteIfExists(path);
+                FileUtils.deleteDirectory(path);
                 refresh();
             } catch (IOException e) {
                 LOG.warning("Failed to delete directory: " + path, e);
@@ -394,19 +512,27 @@ public final class SchematicsPage extends ListPageBase<SchematicsPage.Item> {
         }
     }
 
-    private final class LitematicFileItem extends Item {
-        final LitematicFile file;
+    private final class SchematicItem extends Item {
+        final Path path;
+        final Schematic file;
         final String name;
         final Image image;
 
-        private LitematicFileItem(LitematicFile file) {
-            this.file = file;
+        private SchematicItem(Path path) throws IOException {
+            this.path = path;
+            this.file = Schematic.load(path);
 
-            String name = file.getName();
-            if (name != null && !"Unnamed".equals(name)) {
-                this.name = name;
+            if (file == null) throw new IOException("Unsupported or deleted file: " + path);
+
+            if (this.file instanceof LitematicFile lFile) {
+                String name = lFile.getName();
+                if (StringUtils.isNotBlank(name) && !"Unnamed".equals(name)) {
+                    this.name = name;
+                } else {
+                    this.name = FileUtils.getNameWithoutExtension(path);
+                }
             } else {
-                this.name = StringUtils.removeSuffix(file.getFile().getFileName().toString(), ".litematic");
+                this.name = FileUtils.getNameWithoutExtension(path);
             }
 
             WritableImage image = null;
@@ -430,12 +556,12 @@ public final class SchematicsPage extends ListPageBase<SchematicsPage.Item> {
 
         @Override
         int order() {
-            return 2;
+            return 1;
         }
 
         @Override
         Path getPath() {
-            return file.getFile();
+            return path;
         }
 
         @Override
@@ -445,7 +571,7 @@ public final class SchematicsPage extends ListPageBase<SchematicsPage.Item> {
 
         @Override
         String getDescription() {
-            return file.getFile().getFileName().toString();
+            return path.getFileName().toString();
         }
 
         @Override
@@ -469,25 +595,25 @@ public final class SchematicsPage extends ListPageBase<SchematicsPage.Item> {
 
         @Override
         void onClick() {
-            Controllers.dialog(new LitematicInfoDialog());
+            Controllers.dialog(new SchematicInfoDialog());
         }
 
         @Override
         void onReveal() {
-            FXUtils.showFileInExplorer(file.getFile());
+            FXUtils.showFileInExplorer(path);
         }
 
         @Override
         void onDelete() {
             try {
-                Files.deleteIfExists(file.getFile());
+                Files.deleteIfExists(path);
                 refresh();
             } catch (IOException e) {
-                LOG.warning("Failed to delete litematic file: " + file.getFile(), e);
+                LOG.warning("Failed to delete schematic file: " + path, e);
             }
         }
 
-        private final class LitematicInfoDialog extends JFXDialogLayout {
+        private final class SchematicInfoDialog extends JFXDialogLayout {
             private final ComponentList details;
 
             private void addDetailItem(String key, Object detail) {
@@ -497,38 +623,45 @@ public final class SchematicsPage extends ListPageBase<SchematicsPage.Item> {
                 details.getContent().add(borderPane);
             }
 
-            private void updateContent(LitematicFile file) {
+            private void updateContent(Schematic file) {
                 details.getContent().clear();
                 addDetailItem(i18n("schematics.info.name"), file.getName());
+                addDetailItem(i18n("schematics.info.type"), translateType(file.getType()));
                 if (StringUtils.isNotBlank(file.getAuthor()))
                     addDetailItem(i18n("schematics.info.schematic_author"), translateAuthorName(file.getAuthor()));
                 if (file.getTimeCreated() != null)
                     addDetailItem(i18n("schematics.info.time_created"), I18n.formatDateTime(file.getTimeCreated()));
                 if (file.getTimeModified() != null && !file.getTimeModified().equals(file.getTimeCreated()))
                     addDetailItem(i18n("schematics.info.time_modified"), I18n.formatDateTime(file.getTimeModified()));
-                if (file.getRegionCount() > 0)
-                    addDetailItem(i18n("schematics.info.region_count"), String.valueOf(file.getRegionCount()));
-                if (file.getTotalVolume() > 0)
-                    addDetailItem(i18n("schematics.info.total_volume"), file.getTotalVolume());
-                if (file.getTotalBlocks() > 0)
-                    addDetailItem(i18n("schematics.info.total_blocks"), file.getTotalBlocks());
+                if (file.getRegionCount().isPresent())
+                    addDetailItem(i18n("schematics.info.region_count"), String.valueOf(file.getRegionCount().getAsInt()));
+                if (file.getTotalVolume().isPresent())
+                    addDetailItem(i18n("schematics.info.total_volume"), file.getTotalVolume().getAsLong());
+                if (file.getTotalBlocks().isPresent())
+                    addDetailItem(i18n("schematics.info.total_blocks"), file.getTotalBlocks().getAsInt());
                 if (file.getEnclosingSize() != null)
                     addDetailItem(i18n("schematics.info.enclosing_size"),
-                            String.format("%d x %d x %d", (int) file.getEnclosingSize().getX(),
-                                    (int) file.getEnclosingSize().getY(),
-                                    (int) file.getEnclosingSize().getZ()));
-
-                addDetailItem(i18n("schematics.info.version"), file.getVersion());
+                            String.format("%d x %d x %d", file.getEnclosingSize().x(),
+                                    file.getEnclosingSize().y(),
+                                    file.getEnclosingSize().z()));
+                if (StringUtils.isNotBlank(file.getMinecraftVersion()))
+                    addDetailItem(i18n("schematics.info.mc_data_version"), file.getMinecraftVersion());
+                if (file.getVersion().isPresent())
+                    addDetailItem(i18n("schematics.info.version"),
+                            file.getSubVersion().isPresent()
+                                    ? "%d.%d".formatted(file.getVersion().getAsInt(), file.getSubVersion().getAsInt())
+                                    : file.getVersion().getAsInt()
+                    );
             }
 
-            LitematicInfoDialog() {
+            SchematicInfoDialog() {
                 HBox titleBox = new HBox(8);
                 {
                     Node icon = getIcon(40);
 
                     TwoLineListItem title = new TwoLineListItem();
                     title.setTitle(getName());
-                    title.setSubtitle(file.getFile().getFileName().toString());
+                    title.setSubtitle(path.getFileName().toString());
 
                     titleBox.getChildren().setAll(icon, title);
                     setHeading(titleBox);
@@ -536,10 +669,15 @@ public final class SchematicsPage extends ListPageBase<SchematicsPage.Item> {
 
                 {
                     this.details = new ComponentList();
+                    details.setStyle("-fx-effect: null;");
                     StackPane detailsContainer = new StackPane();
-                    detailsContainer.setPadding(new Insets(10, 0, 0, 0));
                     detailsContainer.getChildren().add(details);
-                    setBody(detailsContainer);
+                    ScrollPane scrollPane = new ScrollPane(detailsContainer);
+                    scrollPane.setFitToWidth(true);
+                    FXUtils.setOverflowHidden(scrollPane, 8);
+                    FXUtils.smoothScrolling(scrollPane);
+                    StackPane.setMargin(scrollPane, new Insets(10, 0, 0, 0));
+                    setBody(scrollPane);
                 }
 
                 {
@@ -552,15 +690,16 @@ public final class SchematicsPage extends ListPageBase<SchematicsPage.Item> {
                     onEscPressed(this, okButton::fire);
                 }
 
+                this.prefWidthProperty().bind(Controllers.getDecorator().contentWidthProperty().multiply(0.6));
+                this.maxHeightProperty().bind(Controllers.getDecorator().contentHeightProperty().multiply(0.8));
+
                 updateContent(file);
             }
         }
     }
 
-    private static final class Cell extends ListCell<Item> {
+    private static final class Cell extends MDListCell<Item> {
 
-        private final RipplerContainer graphics;
-        private final BorderPane root;
         private final StackPane left;
         private final TwoLineListItem center;
         private final HBox right;
@@ -568,12 +707,17 @@ public final class SchematicsPage extends ListPageBase<SchematicsPage.Item> {
         private final ImageContainer iconImageView;
         private final SVGContainer iconSVGView;
 
+        private final BooleanProperty isFileProperty = new SimpleBooleanProperty(this, "isFile", false);
+        private final BooleanProperty isDirectoryProperty = new SimpleBooleanProperty(this, "isDirectory", false);
+
         private final Tooltip tooltip = new Tooltip();
 
-        public Cell() {
-            this.root = new BorderPane();
-            root.getStyleClass().add("md-list-cell");
-            root.setPadding(new Insets(8));
+        public Cell(JFXListView<Item> listView) {
+            super(listView);
+
+            var box = new HBox(8);
+            box.setAlignment(Pos.CENTER_LEFT);
+            box.setPickOnBounds(false);
 
             {
                 this.left = new StackPane();
@@ -581,115 +725,186 @@ public final class SchematicsPage extends ListPageBase<SchematicsPage.Item> {
 
                 this.iconImageView = new ImageContainer(32);
                 this.iconSVGView = new SVGContainer(32);
-
-                BorderPane.setAlignment(left, Pos.CENTER);
-                root.setLeft(left);
             }
-
             {
                 this.center = new TwoLineListItem();
-                root.setCenter(center);
+                HBox.setHgrow(center, Priority.ALWAYS);
             }
-
             {
                 this.right = new HBox(8);
                 right.setAlignment(Pos.CENTER_RIGHT);
 
                 JFXButton btnReveal = FXUtils.newToggleButton4(SVG.FOLDER_OPEN);
-                FXUtils.installFastTooltip(btnReveal, i18n("reveal.in_file_manager"));
+                {
+                    var fo = SVG.FOLDER_OPEN.createIcon();
+                    var f = SVG.FOLDER.createIcon();
+                    btnReveal.graphicProperty().bind(isDirectoryProperty.map(b -> b ? fo : f));
+
+                    var tooltip = new Tooltip();
+                    tooltip.textProperty().bind(isDirectoryProperty.map(b -> b ? i18n("button.reveal_dir") : i18n("reveal.in_file_manager")));
+                    FXUtils.installFastTooltip(btnReveal, tooltip);
+                }
                 btnReveal.setOnAction(event -> {
                     Item item = getItem();
-                    if (item != null && !(item instanceof BackItem))
-                        item.onReveal();
+                    if (item != null) item.onReveal();
                 });
+
+                JFXButton btnExplore = FXUtils.newToggleButton4(SVG.EXPLORE); // Change the icon if allows editing
+                btnExplore.setOnAction(event -> {
+                    Item item = getItem();
+                    if (item instanceof SchematicItem) {
+                        try {
+                            Controllers.navigate(new NBTEditorPage(item.getPath()));
+                        } catch (IOException ignored) { // Should be impossible
+                        }
+                    }
+                });
+                btnExplore.visibleProperty().bind(isFileProperty);
 
                 JFXButton btnDelete = FXUtils.newToggleButton4(SVG.DELETE_FOREVER);
                 btnDelete.setOnAction(event -> {
                     Item item = getItem();
-                    if (item != null && !(item instanceof BackItem)) {
+                    if (item != null) {
                         Controllers.confirm(i18n("button.remove.confirm"), i18n("button.remove"),
                                 item::onDelete, null);
                     }
                 });
 
-                right.getChildren().setAll(btnReveal, btnDelete);
+                right.getChildren().setAll(btnExplore, btnReveal, btnDelete);
             }
 
-            this.graphics = new RipplerContainer(root);
-            FXUtils.onClicked(graphics, () -> {
-                Item item = getItem();
-                if (item != null)
-                    item.onClick();
+            box.getChildren().setAll(left, center, right);
+            StackPane.setMargin(box, new Insets(8));
+            getContainer().getChildren().setAll(box);
+            onClicked(() -> {
+                var item = getItem();
+                if (item != null) item.onClick();
             });
         }
 
         @Override
-        protected void updateItem(Item item, boolean empty) {
-            Item oldItem = getItem();
-            boolean oldEmpty = isEmpty();
+        protected void updateControl(Item item, boolean empty) {
+            if (empty || item == null) return;
 
-            super.updateItem(item, empty);
-
-            if (oldItem == item && oldEmpty == empty) return;
-
-            graphics.releaseRippleImmediately();
             iconImageView.setImage(null);
 
-            if (empty || item == null) {
-                setGraphic(null);
-                center.setTitle("");
-                center.setSubtitle("");
+            isFileProperty.set(item instanceof SchematicItem);
+            isDirectoryProperty.set(item.isDirectory());
+
+            if (item instanceof SchematicItem fileItem && fileItem.getImage() != null) {
+                iconImageView.setImage(fileItem.getImage());
+                left.getChildren().setAll(iconImageView);
             } else {
-                if (item instanceof LitematicFileItem fileItem && fileItem.getImage() != null) {
-                    iconImageView.setImage(fileItem.getImage());
-                    left.getChildren().setAll(iconImageView);
-                } else {
-                    iconSVGView.setIcon(item.getIcon());
-                    left.getChildren().setAll(iconSVGView);
-                }
+                iconSVGView.setIcon(item.getIcon());
+                left.getChildren().setAll(iconSVGView);
+            }
 
-                center.setTitle(item.getName());
-                center.setSubtitle(item.getDescription());
+            center.setTitle(item.getName());
+            center.setSubtitle(item.getDescription());
 
-                Path path = item.getPath();
-                if (path != null) {
-                    tooltip.setText(FileUtils.getAbsolutePath(path));
-                    FXUtils.installSlowTooltip(left, tooltip);
-                } else {
-                    tooltip.setText("");
-                    Tooltip.uninstall(left, tooltip);
-                }
-
-                root.setRight(item instanceof BackItem ? null : right);
-
-                setGraphic(graphics);
+            Path path = item.getPath();
+            if (path != null) {
+                tooltip.setText(FileUtils.getAbsolutePath(path));
+                FXUtils.installSlowTooltip(left, tooltip);
+            } else {
+                Tooltip.uninstall(left, tooltip);
             }
         }
     }
 
-    private final class SchematicsPageSkin extends ToolbarListPageSkin<Item, SchematicsPage> {
-        SchematicsPageSkin() {
-            super(SchematicsPage.this);
+    private static final class SchematicsPageSkin extends SkinBase<SchematicsPage> {
 
-            StackPane placeholderContainer = new StackPane();
-            placeholderContainer.getStyleClass().add("notice-pane");
-            Label placeholderLabel = new Label(i18n("schematics.empty"));
-            placeholderContainer.getChildren().add(placeholderLabel);
-            listView.setPlaceholder(placeholderContainer);
-        }
+        private final JFXListView<Item> listView;
 
-        @Override
-        protected List<Node> initializeToolbar(SchematicsPage skinnable) {
-            return Arrays.asList(
-                    createToolbarButton2(i18n("button.refresh"), SVG.REFRESH, skinnable::refresh),
-                    createToolbarButton2(i18n("schematics.add"), SVG.ADD, skinnable::onAddFiles),
-                    createToolbarButton2(i18n("schematics.create_directory"), SVG.CREATE_NEW_FOLDER, skinnable::onCreateDirectory)
-            );
-        }
+        SchematicsPageSkin(SchematicsPage skinnable) {
+            super(skinnable);
 
-        @Override
-        protected ListCell<Item> createListCell(JFXListView<Item> listView) {
-            return new Cell();
+            StackPane pane = new StackPane();
+            pane.setPadding(new Insets(10));
+            pane.getStyleClass().addAll("notice-pane");
+
+            ComponentList root = new ComponentList();
+            root.getStyleClass().add("no-padding");
+            listView = new JFXListView<>();
+            listView.setSelectionModel(new NoneMultipleSelectionModel<>());
+
+            {
+                StackPane placeholderContainer = new StackPane();
+                placeholderContainer.getStyleClass().add("notice-pane");
+                Label placeholderLabel = new Label(i18n("schematics.empty"));
+                placeholderContainer.getChildren().add(placeholderLabel);
+                listView.setPlaceholder(placeholderContainer);
+            }
+
+            {
+                var toolbar = new HBox();
+                JFXButton btnGoBack = createToolbarButton2("", SVG.ARROW_BACK, skinnable::navigateBack);
+                btnGoBack.disableProperty().bind(skinnable.isRootProperty());
+                JFXButton btnDownload = createToolbarButton2(i18n("schematics.install_mod"), SVG.DOWNLOAD, skinnable::downloadLitematica);
+                FXUtils.onChangeAndOperate(skinnable.downloadTarget, (t) -> btnDownload.setDisable(t == null));
+                toolbar.getChildren().setAll(
+                        btnGoBack,
+                        createToolbarButton2(i18n("button.refresh"), SVG.REFRESH, skinnable::refresh),
+                        createToolbarButton2(i18n("schematics.add"), SVG.ADD, skinnable::onAddFiles),
+                        createToolbarButton2(i18n("schematics.create_directory"), SVG.CREATE_NEW_FOLDER, skinnable::onCreateDirectory),
+                        createToolbarButton2(i18n("button.reveal_dir"), SVG.FOLDER_OPEN, skinnable::onRevealSchematicsFolder),
+                        btnDownload
+                );
+                FXUtils.setOverflowHidden(toolbar, 8);
+                root.getContent().add(toolbar);
+            }
+
+            {
+                SpinnerPane center = new SpinnerPane();
+                ComponentList.setVgrow(center, Priority.ALWAYS);
+                center.loadingProperty().bind(skinnable.loadingProperty());
+
+                listView.setCellFactory(x -> new Cell(listView));
+                listView.setSelectionModel(new NoneMultipleSelectionModel<>());
+                Bindings.bindContent(listView.getItems(), skinnable.getItems());
+
+                // ListViewBehavior would consume ESC pressed event, preventing us from handling it
+                // So we ignore it here
+                ignoreEvent(listView, KeyEvent.KEY_PRESSED, e -> e.getCode() == KeyCode.ESCAPE);
+                listView.getStyleClass().add("no-horizontal-scrollbar");
+
+
+                center.setContent(listView);
+                root.getContent().add(center);
+            }
+
+            {
+                var relPath = new HBox();
+                relPath.getStyleClass().add("jfx-tool-bar-tip");
+                relPath.setAlignment(Pos.CENTER_LEFT);
+                FXUtils.onChangeAndOperate(skinnable.currentDirectoryProperty(), currentDir -> {
+                    relPath.getChildren().clear();
+                    var d = currentDir;
+                    while (d != null) {
+                        if (d != currentDir) {
+                            var box = new HBox(new Text(">"));
+                            box.setPadding(new Insets(3));
+                            relPath.getChildren().add(0, box);
+                        }
+                        var txt = new Text(d.getName());
+                        var box = new HBox(txt);
+                        box.setPadding(new Insets(3));
+                        box.setMouseTransparent(true);
+                        var rippler = new RipplerContainer(box);
+                        var finalD = d;
+                        FXUtils.onClicked(rippler, () -> skinnable.navigateTo(finalD));
+                        relPath.getChildren().add(0, rippler);
+                        d = d.parent;
+                    }
+                });
+                var relPathPane = new HBox(relPath);
+                relPathPane.setPadding(new Insets(2));
+                root.getContent().add(relPathPane);
+            }
+
+            pane.getChildren().setAll(root);
+            getChildren().setAll(pane);
         }
     }
+
 }
